# Abgabe1

./: README.md  main.py  pyproject.toml
source/: load_data.py  power_curve.py  sort.py
