[project]
name = "Abgabe1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "milanbuerkle", email = "m.buerkle@mci4me.at"},
]
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
